# water-utility-sensor-anomaly-detection

./: README.md  pyproject.toml
docs/: ARCHITECTURE.md  ROADMAP.md  THREAT_MODEL.md
src/: app.py  main.py
